<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="action_edit">Редактировать</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помощь</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="birthday">Дата рождения</string>
    <string name="field_of_activity">Сфера деятельности</string>
    <string name="receive_notification">Получать push-уведомления</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="friends">Ваши друзья</string>
    <string name="description_avatar">Аватар</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>

    <string name="camera_permission_denied">Нет доступа к камере</string>
    <string name="choose_help_category">Выберите категорию помощи</string>
    <string name="help_category">Категории помощи</string>

    <string name="search_hint_by_event">Введите название мероприятия</string>
    <string name="search_hint_by_organization">Введите название организации</string>
    <string name="tab_by_event">По мероприятиям</string>
    <string name="tab_by_nko">По НКО</string>
    <string name="filter">Фильтр</string>
    <string name="search_keywords">Ключевые слова: %1$s</string>
    <plurals name="search_result_events">
        <item quantity="one">Результаты поиска: %1$d мероприятие</item>
        <item quantity="few">Результаты поиска: %1$d мероприятия</item>
        <item quantity="many">Результаты поиска: %1$d мероприятий</item>
        <item quantity="other">Результаты поиска: %1$d мероприятий</item>
    </plurals>
    <plurals name="search_result_organizations">
        <item quantity="one">Результаты поиска: %1$d организация</item>
        <item quantity="few">Результаты поиска: %1$d организации</item>
        <item quantity="many">Результаты поиска: %1$d организаций</item>
        <item quantity="other">Результаты поиска: %1$d организаций</item>
    </plurals>
    <string name="search_help_event">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="search_help_organization">Напишите в строке поиска название организации или ключевые слова.</string>
    <string name="search_example">Например,</string>
    <string name="search_example_event"><u>мастер-класс, помощь</u></string>
    <string name="search_example_organization"><u>фонд, администрация</u></string>

    <plurals name="plurals_days">
        <item quantity="one">%1$d день</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    <string-array name="months_full_names">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string name="left_before">Осталось</string>
    <string name="apply">Применить</string>
    <string name="share">Поделиться</string>
    <string name="has_questions">У вас есть вопросы?</string>
    <string name="write_us"><u>Напишите нам</u></string>
    <string name="visit_site"><u>Перейти на сайт организации</u></string>
    <string name="help_things">Помочь вещами</string>
    <string name="become_volunteer">Стать волонтером</string>
    <string name="prof_help">Проф. помощь</string>
    <string name="help_money">Помочь деньгами</string>
    <string name="description_event_photo">Фотографии события</string>
    <string name="more_count">+%1$d</string>

    <string name="authorization">Авторизация</string>
    <string name="external_auth_label">Для участия в мероприятиях войдите в приложение через социальные сети</string>
    <string name="internal_auth_label">Или авторизуйтесь через приложение</string>
    <string name="auth_email">E-mail</string>
    <string name="auth_placeholder_email">Введите e-mail</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_placeholder_password">Введите пароль</string>
    <string name="auth_enter">ВОЙТИ</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="description_auth_by_ok">Авторизация через Одноклассники</string>
    <string name="description_auth_by_fb">Авторизация через Фейсбук</string>
    <string name="description_auth_by_vk">Авторизация через Вконтакте</string>
</resources>