<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_xl"
    android:paddingVertical="@dimen/spacing_xxl"
    android:background="@color/white">

    <Button
        style="@style/DialogTextButton"
        android:id="@+id/btn_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_photo"
        app:icon="@drawable/ic_upload"/>

    <Button
        style="@style/DialogTextButton"
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        app:icon="@drawable/ic_camera"
        android:textAppearance="@style/TextStyle14"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:iconPadding="@dimen/spacing_xl"/>

    <Button
        style="@style/DialogTextButton"
        android:id="@+id/btn_delete_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:icon="@drawable/ic_delete"
        android:textAppearance="@style/TextStyle14"
        android:textAlignment="textStart"
        app:iconPadding="@dimen/spacing_xl"/>

</LinearLayout>