<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ui.fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.App.Toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/profile"
            app:titleCentered="true"
            app:layout_scrollFlags="enterAlways|scroll"
            app:layout_scrollEffect="compress"
            app:menu="@menu/menu_profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_height"
                android:scaleType="centerCrop"
                tools:src="@drawable/image_man"
                android:contentDescription="@string/description_avatar"/>

            <TextView
                style="@style/TextStyle12"
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_marginHorizontal="@dimen/spacing_l"
                tools:text="Константинов Денис" />

            <TextView
                style="@style/TextStyle13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:text="@string/birthday"/>

            <TextView
                style="@style/TextStyle8"
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                tools:text="01 февраля 1980"/>

            <TextView
                style="@style/TextStyle13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:text="@string/field_of_activity"/>

            <TextView
                style="@style/TextStyle8"
                android:id="@+id/tv_field_of_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                tools:text="Хирургия, травматология"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextStyle8"
                android:id="@+id/sw_receive_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxl"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:text="@string/receive_notification"
                app:thumbTint="@color/leaf"
                app:trackTint="@color/turtle_green"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                app:dividerColor="@color/cool_grey" />

            <TextView
                style="@style/TextStyle13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:text="@string/friends"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginHorizontal="@dimen/spacing_l"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_friend"
                tools:itemCount="3"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                app:dividerColor="@color/cool_grey" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_l"
                android:text="@string/logout"
                android:textAppearance="@style/TextStyle6"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>