<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/profile"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
            android:background="@color/turtle_green"
            app:layout_scrollFlags="enterAlways|scroll"
            app:layout_scrollEffect="compress"
            app:menu="@menu/menu_profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="@dimen/bottom_nav_plus_app_bar_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="0dp"
                android:layout_height="@dimen/profile_image_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/image_man"
                android:contentDescription="@string/description_avatar"/>

            <TextView
                style="@style/TextStyle12"
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/spacing_l"
                tools:text="Константинов Денис" />

            <TextView
                style="@style/TextStyle13"
                android:id="@+id/tv_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/birthday"/>

            <TextView
                style="@style/TextStyle8"
                android:id="@+id/tv_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_birthday_label"
                app:layout_constraintStart_toStartOf="@id/tv_birthday_label"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="01 февраля 1980"/>

            <TextView
                style="@style/TextStyle13"
                android:id="@+id/tv_field_of_activity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_birthday"
                app:layout_constraintStart_toStartOf="@id/tv_birthday"
                android:layout_marginTop="@dimen/spacing_s"
                android:text="@string/field_of_activity"/>

            <TextView
                style="@style/TextStyle8"
                android:id="@+id/tv_field_of_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_field_of_activity_label"
                app:layout_constraintStart_toStartOf="@id/tv_field_of_activity_label"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Хирургия, травматология"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextStyle8"
                android:id="@+id/sw_receive_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_field_of_activity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_xxl"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:text="@string/receive_notification"
                app:thumbTint="@color/leaf"
                app:trackTint="@color/turtle_green"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/div_friends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sw_receive_notification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_l"
                app:dividerColor="@color/cool_grey" />

            <TextView
                style="@style/TextStyle13"
                android:id="@+id/tv_friends_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/div_friends"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/spacing_l"
                android:text="@string/friends"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_friends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_friends_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/spacing_l"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_friend"
                tools:itemCount="3"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/div_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_friends"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_l"
                app:dividerColor="@color/cool_grey" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/div_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/spacing_l"
                android:text="@string/logout"
                android:textAppearance="@style/TextStyle6"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_navigation"
        app:labelVisibilityMode="labeled"
        app:layout_insetEdge="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>